disable spring security

--- a/basketqube/src/main/resources/application.properties
+++ b/basketqube/src/main/resources/application.properties
@@ -14,3 +14,7 @@ logging.level.org.springframework=ERROR
 
 #logging level for application
 logging.level.com.logiqube.basketqube=INFO
+
+spring.security.enabled=false
+
+security.basic.enabled=false
