--- a/basketqube/src/main/resources/application.properties
+++ b/basketqube/src/main/resources/application.properties
@@ -4,9 +4,13 @@ server.servlet.context-path=/
 spring.data.mongodb.database=basketqube
 
 spring.data.mongodb.host=${MONGO_DATASOURCE_HOST:localhost}
+# docker settings
+#spring.data.mongodb.host=${MONGO_DATASOURCE_HOST:172.17.0.1}
+#spring.data.mongodb.host=mongo-db
 
-#spring.data.mongodb.username=${MONGO_DATASOURCE_USERNAME:fulfillmentuser}
-#spring.data.mongodb.password=${MONGO_DATASOURCE_PASSWORD:Full@123DB}
+
+#spring.data.mongodb.username=${MONGO_DATASOURCE_USERNAME:user}
+#spring.data.mongodb.password=${MONGO_DATASOURCE_PASSWORD:password}
 spring.data.mongodb.port=${MONGO_DATASOURCE_PORT:27017}
 
 
